Updating users. Clean users.